# mc-clone

./: .gitignore  .gitmodules  CMakeLists.txt
Sources/: CMakeLists.txt  main.cc
Sources/mcc/: aabb.cc  aabb.h  atomic_linked_list.h  big_number.h  bitfield.h  bitset.h  bloom.h  buffer.cc  buffer.h  buffer_object.h  builder.h  cache.cc  cache.h  circular_buffer.h  clock.cc  clock.h  color.cc  color.h  common.h  counter.h  cull_face_scope.cc  cull_face_scope.h  engine.cc  engine.h  event.h  file_resolver.h  fixed_rate_loop.cc  fixed_rate_loop.h  flags.cc  flags.h  framebuffer.cc  framebuffer.h  framebuffer_attachment.h  framebuffer_constants.h  framebuffer_object.h  framebuffer_pipeline.cc  framebuffer_pipeline.h  gfx.cc  gfx.h  gfx.h.in  (+131 more)
Sources/mcc/camera/: camera.cc  camera.h  camera_events.cc  camera_events.h  camera_ortho.cc  camera_ortho.h  camera_perspective.cc  camera_perspective.h  perspective_camera.cc  perspective_camera.h  perspective_camera_component.cc  perspective_camera_component.h
Sources/mcc/component/: component.cc  component.h  component_events.cc  component_events.h  component_id.h  component_state.h  component_state_table.h  component_table.cc  component_table.h
Sources/mcc/ecs/: component.cc  component.h  component_id.h  coordinator.cc  coordinator.h  ecs.h  entity.cc  entity.h  event.cc  event.h  system.cc  system.h
Sources/mcc/engine/: engine.cc  engine.h  engine_event.cc  engine_event.h  engine_event_listener.cc  engine_event_listener.h  engine_events.cc  engine_events.h  engine_old.cc  engine_old.h  engine_signal_checker.h  engine_stage.cc  engine_stage.h  engine_stage_init.h  engine_stage_postinit.h  engine_stage_preinit.h  engine_stage_terminated.h  engine_stage_terminating.h  engine_stage_tick.h  engine_state.cc  engine_state.h  engine_state_init.cc  engine_state_init.h  engine_state_terminated.cc  engine_state_terminated.h  engine_state_tick.cc  engine_state_tick.h  engine_stats.h  engine_tick.h  engine_ticker.cc  engine_ticker.h  tick.h
Sources/mcc/entity/: entity.cc  entity.h  entity_events.h  entity_id.h  entity_old.cc  entity_set.h  entity_signature.h  entity_tracker.cc  entity_tracker.h  generation.cc  generation.h
Sources/mcc/event/: event.h  event_bus.cc  event_bus.h
Sources/mcc/fbo/: fbo.cc  fbo.h  fbo_attachment.h  fbo_attachment_color.cc  fbo_attachment_color.h  fbo_attachment_depth.cc  fbo_attachment_depth.h  fbo_attachment_stencil.cc  fbo_attachment_stencil.h  fbo_attachments.cc  fbo_attachments.h  fbo_events.cc  fbo_events.h  fbo_factory.cc  fbo_factory.h  fbo_id.h  fbo_pipeline.cc  fbo_pipeline.h  fbo_scope.cc  fbo_scope.h  fbo_scope_bind.cc  fbo_scope_bind.h  fbo_status.h  fbo_target.h
Sources/mcc/font/: font.cc  font.h  font_mesh.cc  font_mesh.h  font_renderer.cc  font_renderer.h  font_type.h  glyph.cc  glyph.h  glyph_map.cc  glyph_map.h  truetype.h
Sources/mcc/framebuffer/: framebuffer.cc  framebuffer.h  framebuffer_attachment.h  framebuffer_attachment_color.h  framebuffer_attachment_depth.cc  framebuffer_attachment_depth.h  framebuffer_attachment_stencil.h  framebuffer_constants.h  framebuffer_events.cc  framebuffer_events.h  framebuffer_factory.cc  framebuffer_factory.h  framebuffer_object.cc  framebuffer_object.h  framebuffer_pipeline.cc  framebuffer_pipeline.h
Sources/mcc/gui/: component.h  constants.h  container.h  context.cc  context.h  gui.cc  gui.h  gui_button.cc  gui_button.h  gui_component.cc  gui_component.h  gui_component_flags.h  gui_constants.h  gui_context.cc  gui_context.h  gui_events.cc  gui_events.h  gui_frame.cc  gui_frame.h  gui_frame_renderer.cc  gui_frame_renderer.h  gui_frame_settings.cc  gui_frame_settings.h  gui_on_mouseclick.cc  gui_on_mouseclick.h  gui_on_mouseenter.cc  gui_on_mouseenter.h  gui_on_mouseexit.cc  gui_on_mouseexit.h  gui_tree.cc  gui_tree.h  gui_vertex.h  gui_viewport.cc  gui_viewport.h  gui_window.cc  gui_window.h  nk.cc  nk.h  shape.cc  shape.h  (+2 more)
Sources/mcc/hash/: adler32.cc  adler32.h  murmur3.cc  murmur3.h  siphash.h  siphash_digest.h
Sources/mcc/ibo/: ibo.cc  ibo.h  ibo_builder.cc  ibo_builder.h  ibo_events.cc  ibo_events.h  ibo_factory.cc  ibo_factory.h  ibo_id.cc  ibo_id.h  ibo_index.h  ibo_registry.cc  ibo_registry.h  ibo_scope.cc  ibo_scope.h  ibo_scope_bind.cc  ibo_scope_bind.h  ibo_scope_draw.cc  ibo_scope_draw.h  ibo_scope_read.h  ibo_scope_update.cc  ibo_scope_update.h  ibo_scope_write.h  ibo_type.h  ibo_usage.h  index_buffer.cc  index_buffer.h
Sources/mcc/image/: image.cc  image.h  image_constants.h  image_data.cc  image_data.h  image_decoder.h  image_format.h  image_jpeg.cc  image_jpeg.h  image_png.cc  image_png.h
Sources/mcc/input/: constants.h  keyboard.cc  keyboard.h  mouse.cc  mouse.h
Sources/mcc/keyboard/: key.cc  key.h  key_state.h  key_state_set.h  keyboard.cc  keyboard.h  keyboard_constants.h  keyboard_event.cc  keyboard_event.h  keyboard_glfw.cc  keyboard_glfw.h  keyboard_trie.cc  keyboard_trie.h
Sources/mcc/light/: directional.cc  directional.h  light.h  point.cc  point.h
Sources/mcc/lighting/: ambient_light.cc  ambient_light.h
Sources/mcc/material/: example.material.json  material.cc  material.h  material_builder.cc  material_builder.h  material_component.h  material_document.cc  material_document.h  material_events.cc  material_events.h  material_flags.cc  material_flags.h  material_json.cc  material_json.h  material_loader.cc  material_loader.h  material_loader_dir.cc  material_loader_dir.h  material_loader_spec.cc  material_loader_spec.h  material_registry.cc  material_registry.h  material_scope.cc  (+7 more)
Tests/: CMakeLists.txt  main.cc
Tests/mcc/: json_assertions.h  mock_gl.cc  mock_gl.h  mock_glfw.cc  mock_glfw.h  mock_stdio.cc  mock_stdio.h  mock_subscription.h  mock_uri_parser_config.h  test_cache.cc  test_cache.h  test_color.cc  test_file_resolver.cc  test_gfx_blend_scope.cc  test_material.cc  test_material.h  test_merkle.cc  test_rapidjson.cc  test_rapidjson.h  test_resolution.cc  test_resource.cc  test_resource.h  test_tag.cc  test_tag_set.cc  test_uint256.cc  test_uri.cc  test_uri_parser.cc
Tests/resources/: shader.schema.json
(+597 files in other folders)
