cmake_minimum_required(VERSION 3.5)
project(minecraft)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")

include(MccOptions)

find_package(Threads REQUIRED)
find_package(Glog REQUIRED)
find_package(gflags REQUIRED)
find_package(glfw3 REQUIRED)
find_package(OpenGL REQUIRED COMPONENTS OpenGL)
find_package(GLEW REQUIRED)
find_package(libuv REQUIRED)
find_package(GLM REQUIRED)
find_package(Freetype REQUIRED)
find_package(PNG REQUIRED)
find_package(JPEG REQUIRED)
find_package(rx REQUIRED)
find_package(nk REQUIRED)
find_package(leveldb REQUIRED)
find_package(Flatbuffers REQUIRED)
find_package(utf8 REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(OpenAL REQUIRED)
find_package(GraphViz REQUIRED)

set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 0)

set(PROJECT_GLFW_CONTEXT_VERSION_MAJOR 4)
set(PROJECT_GLFW_CONTEXT_VERSION_MINOR 1)

include_directories(${NK_INCLUDE_DIRS})
include_directories(${RX_INCLUDE_DIRS})
include_directories(${RAPIDJSON_INCLUDE_DIRS})
include_directories(${PROJECT_BINARY_DIR}/Sources/)

link_libraries(Threads::Threads
               glog::glog
               ${GFLAGS_LIBRARIES})

add_subdirectory(Tests)
add_subdirectory(Sources)
add_subdirectory(Benchmarks)
add_subdirectory(lib/units)
add_subdirectory(lib/semver)
add_subdirectory(lib/fmt)
add_subdirectory(lib/backward)
add_subdirectory(lib/vorbis)
add_subdirectory(lib/tweeny)